--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 
   <scm>
     <connection>scm:git:git://github.com/EXIficient/exificient-for-css.git</connection>
-	<developerConnection>scm:git:git@github.com:EXIficient/exificient-for-css.git</developerConnection>
+	<developerConnection>scm:git:https://github.com/EXIficient/exificient-for-css.git</developerConnection>
     <url>https://github.com/EXIficient/exificient-for-css</url>
   </scm>
 
@@ -55,7 +55,7 @@
 	<dependency>
 	   <groupId>com.siemens.ct.exi</groupId>
 	   <artifactId>exificient</artifactId>
-	   <version>0.9.6-SNAPSHOT</version>
+	   <version>0.9.6</version>
 	</dependency>
 	<!-- TEST dependencies -->
 	<dependency>
@@ -126,6 +126,15 @@
           </execution>
         </executions>
       </plugin>
+	  <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-release-plugin</artifactId>
+			<version>2.5.3</version>
+			<configuration>
+			  <tagNameFormat>v@{project.version}</tagNameFormat>
+			</configuration>
+	  </plugin>
+	  
     </plugins>
   </build>
 
