--- a/.classpath
+++ b/.classpath
@@ -4,13 +4,45 @@
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/org/w3c/css/sac/1.3/sac-1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.18/cssparser-0.9.18.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient/0.9.6-SNAPSHOT/exificient-0.9.6-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient/0.9.6-SNAPSHOT/exificient-0.9.6-SNAPSHOT-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.6-SNAPSHOT/exificient-core-0.9.6-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.6-SNAPSHOT/exificient-core-0.9.6-SNAPSHOT-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.6-SNAPSHOT/exificient-grammars-0.9.6-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.6-SNAPSHOT/exificient-grammars-0.9.6-SNAPSHOT-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0.jar" sourcepath="M2_REPO/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01.jar" sourcepath="M2_REPO/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar" sourcepath="M2_REPO/junit/junit/4.11/junit-4.11-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/w3c/css/sac/1.3/sac-1.3.jar" sourcepath="M2_REPO/org/w3c/css/sac/1.3/sac-1.3-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.18/cssparser-0.9.18.jar" sourcepath="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.18/cssparser-0.9.18-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/net/sourceforge/cssparser/cssparser/0.9.18/cssparser-0.9.18-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.6/exificient-core-0.9.6.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.6/exificient-core-0.9.6-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-core/0.9.6/exificient-core-0.9.6-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.6/exificient-grammars-0.9.6.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.6/exificient-grammars-0.9.6-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-grammars/0.9.6/exificient-grammars-0.9.6-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0.jar" sourcepath="M2_REPO/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01.jar" sourcepath="M2_REPO/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/xml-apis/xml-apis/1.4.01/xml-apis-1.4.01-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/junit/junit/4.11/junit-4.11.jar" sourcepath="M2_REPO/junit/junit/4.11/junit-4.11-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/junit/junit/4.11/junit-4.11-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar" sourcepath="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
 </classpath>
