--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,9 @@
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="var" path="M2_REPO/org/w3c/css/sac/1.3/sac-1.3.jar" sourcepath="M2_REPO/org/w3c/css/sac/1.3/sac-1.3-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.18/cssparser-0.9.18.jar" sourcepath="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.18/cssparser-0.9.18-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.19/cssparser-0.9.19.jar" sourcepath="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.19/cssparser-0.9.19-sources.jar">
     <attributes>
-      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/net/sourceforge/cssparser/cssparser/0.9.18/cssparser-0.9.18-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/net/sourceforge/cssparser/cssparser/0.9.19/cssparser-0.9.19-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT-sources.jar">
@@ -15,14 +15,14 @@
       <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.6/exificient-core-0.9.6.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.6/exificient-core-0.9.6-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.7-SNAPSHOT/exificient-core-0.9.7-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.7-SNAPSHOT/exificient-core-0.9.7-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-core/0.9.6/exificient-core-0.9.6-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-core/0.9.7-SNAPSHOT/exificient-core-0.9.7-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.6/exificient-grammars-0.9.6.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.6/exificient-grammars-0.9.6-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.7-SNAPSHOT/exificient-grammars-0.9.7-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.7-SNAPSHOT/exificient-grammars-0.9.7-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-grammars/0.9.6/exificient-grammars-0.9.6-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-grammars/0.9.7-SNAPSHOT/exificient-grammars-0.9.7-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0.jar" sourcepath="M2_REPO/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0-sources.jar">
