snapshot version of cssparser fixes issue https://sourceforge.net/p/cssparser/bugs/66/

--- a/.classpath
+++ b/.classpath
@@ -5,11 +5,7 @@
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="var" path="M2_REPO/org/w3c/css/sac/1.3/sac-1.3.jar" sourcepath="M2_REPO/org/w3c/css/sac/1.3/sac-1.3-sources.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.19/cssparser-0.9.19.jar" sourcepath="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.19/cssparser-0.9.19-sources.jar">
-    <attributes>
-      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/net/sourceforge/cssparser/cssparser/0.9.19/cssparser-0.9.19-javadoc.jar!/" name="javadoc_location"/>
-    </attributes>
-  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.20-SNAPSHOT/cssparser-0.9.20-SNAPSHOT.jar" sourcepath="M2_REPO/net/sourceforge/cssparser/cssparser/0.9.20-SNAPSHOT/cssparser-0.9.20-SNAPSHOT-sources.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT-sources.jar">
     <attributes>
       <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient/0.9.7-SNAPSHOT/exificient-0.9.7-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
