--- a/.classpath
+++ b/.classpath
@@ -45,4 +45,14 @@
       <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/yahoo/platform/yui/yuicompressor/2.4.8/yuicompressor-2.4.8.jar" sourcepath="M2_REPO/com/yahoo/platform/yui/yuicompressor/2.4.8/yuicompressor-2.4.8-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/yahoo/platform/yui/yuicompressor/2.4.8/yuicompressor-2.4.8-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/rhino/js/1.7R2/js-1.7R2.jar" sourcepath="M2_REPO/rhino/js/1.7R2/js-1.7R2-sources.jar">
+    <attributes>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/rhino/js/1.7R2/js-1.7R2-javadoc.jar!/" name="javadoc_location"/>
+    </attributes>
+  </classpathentry>
 </classpath>
