--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 		<version>4.11</version>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+	    <groupId>com.yahoo.platform.yui</groupId>
+	    <artifactId>yuicompressor</artifactId>
+	    <version>2.4.8</version>
+	    <scope>test</scope>
+	</dependency>
   </dependencies>
 
   <properties>
