--- a/pom.xml
+++ b/pom.xml
@@ -1,166 +1,182 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.siemens.ct.exi</groupId>
-  <artifactId>exificient-for-css</artifactId>
-  <name>EXIficient for CSS</name>
-  <url>http://exificient.github.io/</url>
-  <version>0.9.7-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <description>EXIficient is an open source implementation of the W3C Efficient XML Interchange
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.siemens.ct.exi</groupId>
+	<artifactId>exificient-for-css</artifactId>
+	<name>EXIficient for CSS</name>
+	<url>http://exificient.github.io/</url>
+	<version>0.9.7-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<description>EXIficient is an open source implementation of the W3C Efficient XML Interchange
     (EXI) format specification written in the Java programming language. The EXI format is a very
     compact representation for the Extensible Markup Language (XML) Information Set that is intended
     to simultaneously optimize performance and the utilization of computational resources. </description>
-  <organization>
-    <name>Siemens AG</name>
-    <url>http://www.siemens.com/corporate-technology/</url>
-  </organization>
+	<organization>
+		<name>Siemens AG</name>
+		<url>http://www.siemens.com/corporate-technology/</url>
+	</organization>
 
-  <developers>
-    <developer>
-      <name>Daniel Peintner</name>
-      <email>Daniel.Peintner.EXT@siemens.com</email>
-      <organization>Siemens AG</organization>
-    </developer>
-  </developers>
+	<developers>
+		<developer>
+			<name>Daniel Peintner</name>
+			<email>Daniel.Peintner.EXT@siemens.com</email>
+			<organization>Siemens AG</organization>
+		</developer>
+	</developers>
 
-  <licenses>
-    <license>
-      <name>MIT License</name>
-      <url>http://www.opensource.org/licenses/mit-license.php</url>
-    </license>
-  </licenses>
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
 
-  <issueManagement>
-    <system>Github Issues</system>
-    <url>https://github.com/EXIficient/exificient-for-css/issues</url>
-  </issueManagement>
+	<issueManagement>
+		<system>Github Issues</system>
+		<url>https://github.com/EXIficient/exificient-for-css/issues</url>
+	</issueManagement>
 
-  <scm>
-    <connection>scm:git:git://github.com/EXIficient/exificient-for-css.git</connection>
-	<developerConnection>scm:git:https://github.com/EXIficient/exificient-for-css.git</developerConnection>
-    <url>https://github.com/EXIficient/exificient-for-css</url>
-    <tag>HEAD</tag>
-  </scm>
+	<scm>
+		<connection>scm:git:git://github.com/EXIficient/exificient-for-css.git</connection>
+		<developerConnection>scm:git:https://github.com/EXIficient/exificient-for-css.git</developerConnection>
+		<url>https://github.com/EXIficient/exificient-for-css</url>
+		<tag>HEAD</tag>
+	</scm>
 
-  <dependencies>
-	<dependency>
-	    <groupId>org.w3c.css</groupId>
-	    <artifactId>sac</artifactId>
-	    <version>1.3</version>
-	</dependency>
-	<dependency>
-	    <groupId>net.sourceforge.cssparser</groupId>
-	    <artifactId>cssparser</artifactId>
-	    <version>0.9.20</version>
-	    <!-- <version>0.9.20-SNAPSHOT</version>--><!-- fixes bug https://sourceforge.net/p/cssparser/bugs/66/ -->
-	</dependency>
-	<dependency>
-	   <groupId>com.siemens.ct.exi</groupId>
-	   <artifactId>exificient</artifactId>
-	   <version>0.9.7-SNAPSHOT</version>
-	</dependency>
-	<!-- TEST dependencies -->
-	<dependency>
-		<groupId>junit</groupId>
-		<artifactId>junit</artifactId>
-		<version>4.11</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>com.yahoo.platform.yui</groupId>
-	    <artifactId>yuicompressor</artifactId>
-	    <version>2.4.8</version>
-	    <scope>test</scope>
-	</dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.w3c.css</groupId>
+			<artifactId>sac</artifactId>
+			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.cssparser</groupId>
+			<artifactId>cssparser</artifactId>
+			<version>0.9.20</version>
+			<!-- <version>0.9.20-SNAPSHOT</version> --><!-- fixes bug https://sourceforge.net/p/cssparser/bugs/66/ -->
+		</dependency>
+		<dependency>
+			<groupId>com.siemens.ct.exi</groupId>
+			<artifactId>exificient</artifactId>
+			<version>0.9.7-SNAPSHOT</version>
+		</dependency>
+		<!-- TEST dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.yahoo.platform.yui</groupId>
+			<artifactId>yuicompressor</artifactId>
+			<version>2.4.8</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- Brotli Test comparisons -->
+		<dependency>
+			<groupId>org.meteogroup.jbrotli</groupId>
+			<artifactId>jbrotli</artifactId>
+			<version>0.5.0</version>
+		</dependency>
+	</dependencies>
 
-  <properties>
-    <!-- maven-compiler-plugin configuration -->
-    <maven.compiler.source>1.5</maven.compiler.source>
-    <maven.compiler.target>1.5</maven.compiler.target>
-  </properties>
+	<repositories>
+		<!-- Brotli Test repository -->
+		<repository>
+			<id>bintray-nitram509-jbrotli</id>
+			<name>bintray</name>
+			<url>http://dl.bintray.com/nitram509/jbrotli</url>
+		</repository>
+	</repositories>
 
-
-  <build>
-    <finalName>exificient-for-css</finalName>
-    <plugins>
-      <!-- Include test classes -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.4</version>
-        <executions>
-          <execution>
-          	<id>attach-test</id>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <!-- Include Java Source OR mvn source:jar  -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.2.1</version><!--2.3.2-->
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <downloadSources>true</downloadSources>
-          <downloadJavadocs>true</downloadJavadocs>
-        </configuration>
-      </plugin>
-      <!-- Include Java Doc OR mvn javadoc:jar  -->
-      <!-- see http://maven.apache.org/plugins/maven-javadoc-plugin/examples/javadoc-resources.html -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9.1</version><!--2.3.2-->
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>com.siemens.ct.exi.css.EXIficientCMD4CSS</mainClass>
-            </manifest>
-          </archive>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
-</plugin>
-	  <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-release-plugin</artifactId>
-			<version>2.5.3</version>
-			<configuration>
-			  <tagNameFormat>v@{project.version}</tagNameFormat>
-			</configuration>
-	  </plugin>
-	  
-    </plugins>
-  </build>
+	<!-- maven-compiler-plugin configuration -->
+	<!-- <properties>
+		<maven.compiler.source>1.5</maven.compiler.source>
+		<maven.compiler.target>1.5</maven.compiler.target>
+	</properties> -->
 
 
-  <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
-  </parent>
+	<build>
+		<finalName>exificient-for-css</finalName>
+		<plugins>
+			<!-- Include test classes -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-test</id>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Include Java Source OR mvn source:jar -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version><!--2.3.2 -->
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+			</plugin>
+			<!-- Include Java Doc OR mvn javadoc:jar -->
+			<!-- see http://maven.apache.org/plugins/maven-javadoc-plugin/examples/javadoc-resources.html -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version><!--2.3.2 -->
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.siemens.ct.exi.css.EXIficientCMD4CSS</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+
+
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
 
 </project>
