--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk:
 - oraclejdk8
 - oraclejdk7
-- openjdk6
+#- openjdk6 # jbrotli does not support Java6
 env:
   global:
   - SONATYPE_USERNAME=daniel_peintner
