get ready for release 0.9.7

--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>com.siemens.ct.exi</groupId>
 			<artifactId>exificient</artifactId>
-			<version>0.9.7-SNAPSHOT</version>
+			<version>0.9.7</version><!-- -SNAPSHOT -->
 		</dependency>
 		<!-- TEST dependencies -->
 		<dependency>
