--- a/.classpath
+++ b/.classpath
@@ -12,19 +12,19 @@
       <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/net/sourceforge/cssparser/cssparser/0.9.23/cssparser-0.9.23-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient/0.9.7/exificient-0.9.7.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient/0.9.7/exificient-0.9.7-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient/1.0.0-SNAPSHOT/exificient-1.0.0-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient/1.0.0-SNAPSHOT/exificient-1.0.0-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient/0.9.7/exificient-0.9.7-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient/1.0.0-SNAPSHOT/exificient-1.0.0-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.7/exificient-core-0.9.7.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-core/0.9.7/exificient-core-0.9.7-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-core/1.0.0-SNAPSHOT/exificient-core-1.0.0-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-core/1.0.0-SNAPSHOT/exificient-core-1.0.0-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-core/0.9.7/exificient-core-0.9.7-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-core/1.0.0-SNAPSHOT/exificient-core-1.0.0-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
-  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.7/exificient-grammars-0.9.7.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-grammars/0.9.7/exificient-grammars-0.9.7-sources.jar">
+  <classpathentry kind="var" path="M2_REPO/com/siemens/ct/exi/exificient-grammars/1.0.0-SNAPSHOT/exificient-grammars-1.0.0-SNAPSHOT.jar" sourcepath="M2_REPO/com/siemens/ct/exi/exificient-grammars/1.0.0-SNAPSHOT/exificient-grammars-1.0.0-SNAPSHOT-sources.jar">
     <attributes>
-      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-grammars/0.9.7/exificient-grammars-0.9.7-javadoc.jar!/" name="javadoc_location"/>
+      <attribute value="jar:file:/C:/Users/mchn4310/.m2/repository/com/siemens/ct/exi/exificient-grammars/1.0.0-SNAPSHOT/exificient-grammars-1.0.0-SNAPSHOT-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0.jar" sourcepath="M2_REPO/xerces/xercesImpl/2.11.0/xercesImpl-2.11.0-sources.jar">
